--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+processResources {
+    from("src/main/resources") {
+        include "**/*"
+    }
+}
