--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
       thread-name-prefix: "Async-"
 
   datasource:
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: jdbc:postgresql://localhost:5433/devopsdb
+    username: postgres
+    password: 1234
     driver-class-name: org.postgresql.Driver
   sql:
     init:
