--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,9 @@ spring:
 logging:
   level:
     root: debug
+    org:
+      springframework:
+      security: DEBUG
   file:
     path: logs/app.log
 
@@ -41,3 +44,6 @@ server:
   error:
     include-message: always
     include-stacktrace: always
+    
+jwt:
+  secret: abcdefghijk
