--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'jacoco'
 }
 
@@ -49,10 +49,6 @@ dependencies {
 	// Testing
 	testImplementation     'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly       'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
 }
 
 jacoco {
