--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Grant permission to Gradle
         run: chmod +x ./gradlew
 
-      - name: Build
-        run: ./gradlew build
+      - name: Build & Test & Coverage
+        run: ./gradlew build jacocoTestReport
 
-      - name: SonarCloud Analysis
+      - name: SonarCloud analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew sonarqube -Dsonar.token=${{ secrets.SONAR_TOKEN }}
