--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,10 +2,12 @@ name: sonar.yml
 on:
   push:
     branches:
-      - '**'
+      - main
+      - develop
   pull_request:
     branches:
       - main
+      - develop
   workflow_dispatch:
 
 jobs:
