--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,15 @@ jobs:
           chmod +x gradlew
           ./gradlew clean build -x test
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    
-      - name: Build and Push Docker Image
+      # ARM64 아키텍처용 이미지 빌드
+      - name: Build and Push Docker Image (for ARM64)
         run: |
-          docker build --no-cache -t naaadang/devops-team6:latest .
           docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
-          docker push naaadang/devops-team6:latest
+          docker buildx build --platform linux/arm64 --push -t naaadang/devops-team6:latest .
+
 
    
       - name:  Save SSH Key and Set Permissions
