--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,4 +47,13 @@ server:
     include-stacktrace: always
     
 
-
+#prometheus, grafana
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
