--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,12 @@ dependencies {
 	// Testing
 	testImplementation     'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly       'org.junit.platform:junit-platform-launcher'
+
+	implementation 'io.micrometer:micrometer-registry-prometheus'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
