--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,9 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_KEY }}
+          # 최신 docker-compose.yml을 서버에 복사
+          source: "docker-compose.yml"
+          target: "~/team6"
           port: 22
           script: |
             
