--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+# deploy.yml
+
 name: Deploy to EC2
 
 on:
@@ -13,14 +15,12 @@ jobs:
       - name: 🔹 Checkout Repository
         uses: actions/checkout@v3
 
-  
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-         
       - name: Build JAR with Gradle
         run: |
           chmod +x gradlew
@@ -29,40 +29,53 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # ARM64 아키텍처용 이미지 빌드
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and Push Docker Image (for ARM64)
-        run: |
-          docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
-          docker buildx build --platform linux/arm64 --push -t naaadang/devops-team6:latest .
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/arm64
+          push: true
+          tags: naaadang/devops-team6:latest
 
-
-   
-      - name:  Save SSH Key and Set Permissions
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SERVER_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ls -al ~/.ssh  # 디버깅용 (정상적으로 생성되었는지 확인)
-
-     
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_KEY }}
-          # 최신 docker-compose.yml을 서버에 복사
-          source: "docker-compose.yml"
-          target: "~/team6"
           port: 22
           script: |
+            # 원격 서버에 필요한 디렉토리 생성
+            mkdir -p ~/team6/prometheus
             
 
+      - name: Copy configuration files to EC2
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SERVER_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "mkdir -p ~/team6/prometheus"
+          scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/team6/docker-compose.yml
+          scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no prometheus/prometheus.yml ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/team6/prometheus/prometheus.yml
+
+      - name: Run Docker Compose on EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_KEY }}
+          script: |
             echo "EC2 접속 성공"
             cd ~/team6
             docker-compose down
             docker pull naaadang/devops-team6:latest
-            docker-compose pull
+            docker-compose pull 
             docker-compose up -d
             docker image prune -f
 
