--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,20 @@ services:
     networks:
       - spring-network
 
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    restart: always
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    networks:
+      - spring-network
+    ports:
+      - "5003:8080"
+
 volumes:
   postgres_data:
   grafana-storage:
