--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,10 +1,12 @@
 spring:
+  # === 테스트용 H2 DB 설정 ===
   datasource:
-    url: jdbc:postgresql://localhost:5433/devopsdb
-    username: postgres
-    password: 1234
+    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
   jpa:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
