--- a/.github/workflows/jmeter-test.yml
+++ b/.github/workflows/jmeter-test.yml
@@ -41,6 +41,6 @@ jobs:
 
       - name: Upload JMeter Test Report
         uses: actions/upload-artifact@v3
-        with:
-          name: jmeter-test-report
+        with: 
+          name: jmeter-test-report  #jmetertest
           path: report
