--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -22,18 +22,23 @@ jobs:
           echo "Waiting for 30 seconds for the application to stabilize..."
           sleep 30
 
-      - name: Install and Run JMeter Test
+      - name: Install and Run JMeter Test (Latest Version)
         run: |
-          echo "Starting JMeter performance test..."
-          sudo apt-get update
-          sudo apt-get install -y jmeter
-          
+          # 최신 JMeter 다운로드 및 설치
+          JMETER_VERSION=5.6.3
+          wget https://downloads.apache.org//jmeter/binaries/apache-jmeter-$JMETER_VERSION.tgz
+          tar -xzf apache-jmeter-$JMETER_VERSION.tgz
+          mv apache-jmeter-$JMETER_VERSION jmeter
+          echo "$PWD/jmeter/bin" >> $GITHUB_PATH
+
+          # 테스트 실행 및 리포트 생성
           jmeter -n \
                  -t jmeter/performance-test.jmx \
                  -Jserver.host=${{ secrets.SERVER_HOST }} \
                  -Jserver.port=443 \
                  -l result.jtl \
                  -e -o report
+
 
       - name: Check if report folder exists
         run: |
