--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -1,8 +1,10 @@
+# .github/workflows/jmeter-test.yml
+
 name: JMeter Performance Test
 
 on:
   workflow_run:
-    workflows: ["Deploy to EC2"] # 또는 "Deploy"
+    workflows: ["Deploy to EC2"] # deploy.yml의 name이 "Deploy"일 경우. "Deploy to EC2" 였다면 그것으로 수정
     types:
       - completed
     branches:
@@ -15,75 +17,33 @@ jobs:
     if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
 
     steps:
+      # 1. 테스트할 .jmx 파일이 있는 리포지토리를 가져옵니다.
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Wait for application to start
-        run: |
-          echo "Waiting for 30 seconds for the application to stabilize..."
-          sleep 30
-
-      - name: Install, Run, and Debug JMeter
-        # apt-get 대신 최신 버전을 직접 다운로드하여 설치합니다.
-        # jmeter가 실패하더라도 로그 확인을 위해 다음 스텝을 계속 진행
-        continue-on-error: true
-        run: |
-          # --- 1. JMeter 설치 (최신 버전) ---
-          JMETER_VERSION=5.6.3
-          JMETER_INSTALL_DIR="jmeter_install"
-          wget https://downloads.apache.org/jmeter/binaries/apache-jmeter-$JMETER_VERSION.tgz
-          tar -xzf apache-jmeter-$JMETER_VERSION.tgz
-          mv apache-jmeter-$JMETER_VERSION $JMETER_INSTALL_DIR
-          echo "$PWD/$JMETER_INSTALL_DIR/bin" >> $GITHUB_PATH
-
-          # --- 2. JMeter 테스트 실행 ---
-          echo "Starting JMeter command..."
-          rm -rf report
-          jmeter -n \
-                 -t jmeter/performance-test.jmx \
-                 -Jserver.host=${{ secrets.SERVER_HOST }} \
-                 -Jserver.port=443 \
-                 -l result.jtl \
-                 -e -o report
-        
-      - name: Check logs and directory state
-        # 이전 스텝의 성공 여부와 관계없이 항상 이 스텝을 실행
-        if: always()
-        run: |
-          echo "--- Current directory contents ---"
-          ls -al
+      # 2. JMeter Action을 실행합니다.
+      # 이 Action이 JMeter 설치와 테스트 실행을 모두 처리합니다.
+      - name: Run JMeter Test using GitHub Action
+        uses: jmeter-sh/jmeter-action@v3
+        with:
+          # 실행할 테스트 파일(.jmx)의 경로를 지정합니다.
+          test: jmeter/performance-test.jmx
           
-          echo
-          echo "--- Checking result.jtl file ---"
-          if [ -f "result.jtl" ]; then
-            echo "✅ result.jtl file created. Displaying first 10 lines:"
-            head -n 10 result.jtl
-          else
-            echo "❌ result.jtl file NOT found."
-          fi
+          # jmeter 명령어에 전달할 추가 인자들을 지정합니다.
+          # -J 옵션을 사용하여 변수를 전달합니다.
+          args: "-Jserver.host=${{ secrets.SERVER_HOST }} -Jserver.port=443"
 
-          echo
-          echo "--- Displaying jmeter.log for debugging ---"
-          # JMeter 로그 파일은 설치 경로의 bin 폴더 안에 생성됩니다.
-          LOG_FILE="jmeter_install/bin/jmeter.log"
-          if [ -f "$LOG_FILE" ]; then
-            echo "✅ Displaying contents of $LOG_FILE:"
-            cat "$LOG_FILE"
-          else
-            echo "❌ $LOG_FILE NOT found."
-          fi
-          
-      - name: Final check for report folder
-        run: |
-          if [ -d "report" ]; then
-            echo "✅ Report folder exists"
-          else
-            echo "❌ Report folder was not created. Check the logs above."
-            exit 1
-          fi
-
-      - name: Upload JMeter Test Report
+      # 3. 테스트 결과(HTML 리포트)를 업로드합니다.
+      # JMeter Action이 'report' 폴더와 'result.jtl' 파일을 생성해 줍니다.
+      - name: Upload JMeter HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: jmeter-test-report
           path: report
+
+      # 4. (선택사항) 상세 로그 파일(.jtl)도 함께 업로드합니다.
+      - name: Upload JMeter JTL Log
+        uses: actions/upload-artifact@v4
+        with:
+          name: jmeter-jtl-log
+          path: result.jtl
